# ckpool-lhr-bch-pi5

./: .gitignore  ChangeLog  DIFFERENCES.md  Makefile  Makefile.am  Makefile.in  README.md  ckpool-lhr-bch.conf.example  config.h  config.h.in  config.status  configure  configure.ac  libtool
.github/workflows/: codeql.yml
autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.4
src/: Makefile  Makefile.am  Makefile.in  bitcoin.c  ckpmsg  ckpool  ckpool.c  ckpool.h  generator.c  libckpool.c  libckpool.h  notifier  stratifier.c  stratifier.h  stratifier_internal.h  ua_utils.c
src/.deps/: bitcoin.Po  ckpmsg.Po  ckpool.Po  connector.Po  generator.Po  libckpool.Po  notifier.Po  sha2.Po  sha256_arm_shani.Po  stratifier.Po  ua_utils.Po  worker_ua.Po
src/jansson-2.14/: Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
src/jansson-2.14/autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.4
src/jansson-2.14/doc/: Makefile  Makefile.in
src/jansson-2.14/src/: Makefile  Makefile.in  dump.lo  error.lo  hashtable.lo  hashtable_seed.lo  libjansson.la  load.lo  memory.lo  pack_unpack.lo  strbuffer.lo  strconv.lo  utf.lo  value.lo  version.lo
src/jansson-2.14/src/.deps/: dump.Plo  error.Plo  hashtable.Plo  hashtable_seed.Plo  load.Plo  memory.Plo  pack_unpack.Plo  strbuffer.Plo  strconv.Plo  utf.Plo  value.Plo  version.Plo
tests/: Makefile.am  README.md
tests/unit/: test-address.c  test-auth-rejection.c  test-config.c  test-difficulty.c  test-donation.c  test-dropidle.c  test-encoding.c  test-endian.c  test-fractional-config.c  test-fractional-stats.c  test-fulltest.c  test-serialization.c  test-sha256.c  test-share-params.c  test-string-utils.c  test-time-utils.c  test-ua-aggregation.c  test-uppercase-cashaddr.c  test-useragent.c  test-vardiff.c  test-zombie-cleanup.c
